--- a/src/sass/_shortcodes.scss
+++ b/src/sass/_shortcodes.scss
@@ -1,7 +1,6 @@
 // {{< expand "Label" "icon" >}}
 .gblog-expand {
-  margin-top: $padding-16;
-  margin-bottom: $padding-16;
+  margin: $padding-16 0;
 
   border: $border-1 solid var(--accent-color);
   border-radius: $border-radius;
@@ -17,7 +16,7 @@
 
   &__content {
     display: none;
-    padding: $padding-16;
+    padding: 0 $padding-16;
   }
 
   &__control:checked + &__content {
@@ -31,8 +30,7 @@
 
 // {{< tabs >}}
 .gblog-tabs {
-  margin-top: $padding-16;
-  margin-bottom: $padding-16;
+  margin: $padding-16 0;
 
   border: $border-1 solid var(--accent-color);
   border-radius: $border-radius;
@@ -54,7 +52,7 @@
     order: 999; //Move content blocks to the end
     width: 100%;
     border-top: $border-1 solid var(--accent-color-lite);
-    padding: $padding-16;
+    padding: 0 $padding-16;
     display: none;
   }
 
@@ -72,6 +70,8 @@
 
 // {{< columns >}}
 .gblog-columns {
+  margin: $padding-16 0;
+
   &--regular > :first-child {
     flex: 1;
   }
@@ -88,7 +88,6 @@
 
   &__content {
     flex: 1 1;
-    margin: $padding-16 0;
     min-width: $body-min-width * 0.66;
     padding: 0;
   }
@@ -101,12 +100,12 @@
 // {{< button >}}
 .gblog-button {
   $root: &;
+  margin: $padding-16 0;
 
   display: inline-block;
   background: var(--accent-color-lite);
   border: $border-1 solid var(--accent-color);
   border-radius: $border-radius;
-  margin: $padding-8 0;
   cursor: pointer;
   user-select: none;
 
@@ -146,6 +145,7 @@
 
 // {{< box >}}
 .gblog-box {
+  flex-direction: column;
   background: var(--accent-color-lite);
   border: $border-1 solid var(--accent-color);
   border-radius: $border-radius;
@@ -170,9 +170,9 @@
     gap: $padding-8;
 
     svg.gblog-icon {
-      width: 1.3rem;
-      height: 1.3rem;
-      min-width: 1.3rem;
+      width: $padding-24;
+      height: $padding-24;
+      min-width: $padding-24;
     }
   }
 
